--- a/src/njk/2018-10-18.html
+++ b/src/njk/2018-10-18.html
@@ -1,5 +1,7 @@
 {% extends '_layouts/detail.njk' %}
 
+  <title>Pirate Cove | {% block page_title %}Oct. 18, 2018{% endblock %}</title>
+
 {% block story %}
   <h2>It was a dark and stormy night</h2>
   <h5>Captain's log, Oct. 18, 2018</h5>
