--- a/src/njk/2018-10-20.html
+++ b/src/njk/2018-10-20.html
@@ -1,7 +1,9 @@
 {% extends '_layouts/detail.njk' %}
 
+  <title>Pirate Cove | {% block page_title %}Oct. 20, 2018{% endblock %}</title>
+
 {% block story %}
-  <h2>It was a dark and stormy night</h2>
-  <h5>Captain's log, Oct. 18, 2018</h5>
+  <h2>Call me Ishmael</h2>
+  <h5>Captain's log, Oct. 20, 2018</h5>
   <p>Interloper crimp spanker Barbary Coast splice the main brace bilged on her anchor black spot chandler trysail salmagundi. Brigantine fire ship scallywag log squiffy bowsprit lateen sail American Main cog smartly. Dance the hempen jig bilge log galleon pirate yard list Barbary Coast Corsair run a rig.</p>
 {% endblock %}
